## Change log

### 1.7.1
* Customizer colour swatch: print the custom styles in footer
* Lazy Loading Images: add a class to bypass a image

### 1.7.0
* Added a colour swatch to customizer
* Added in a conditional statement so the footer widgets container does not show unless there are widgets active
* Removed the deprecated tags (readme, style)
* Added a filter to excerpt (what post types show excerpt or full content)
* Improved title styling when no featured image is set
* Fixed a bug with the banner paralax type scrolling and the LSX TO Plugin Banner Google Map
* Fixed a problem with CSS z-index (Footer CTA conflicting with Banner)
* Fixed HTML input styles (missing textarea and input:email)
* General small fixes
* Added Lazy Loading Images
* Speed Optimization: minified all script and style files
* Removed unnecessary Google font file

### 1.6.2
* Added a conditional statement so the footer widgets container does not show unless there are widgets active
* Page 404: fixed big gap below the banner when the main menu is not fixed
* Fixed comment reply
* Post (single): improved sharing experience in small devices
* Fixed paginated posts
* Post (archive): anchored the comments counter to comments section in single post
* Post (single): the tags could use more space to the right before wrapping onto a second line
* Post (archive, single): fixed long title
* Improved grandchild menu item
* Fixed in small screens the easing scroll with big content banner
* Improved (fixed) spacing below the posts list and single post
* Changed (Jetpack) related posts headline to "Related Posts"
* Fixed the email sharing (modal) on mobile
* Improved vertical alignment in homepage banner	

### 1.6.1
* Fixed Bootstrap modal in small devices (< 768px)
* Changed the meta viewport to recommended solution for mobile
* Cleared out unused image files in /img folder
* Fixed font customizer
* Fixed title display in homepage
* Fixed lateral paddings in all pages

### 1.6
* New global loading.