@@ -3,6 +3,7 @@
 ### 1.7.1
 * Customizer colour swatch: print the custom styles in footer
 * Lazy Loading Images: add a class to bypass a image
+* Added in a filter to remove the "Custom Fields" meta box.
 
 ### 1.7.0
 * Added a colour swatch to customizer
